LOK-1787: stop minion if gateway return any certificate errors (#1445)
* LOK-1787: add certificate checking and exit

* LOK-1787: group exit code into single class

* LOK-1787: minor clean up

* LOK-1787: switch exit to karaf shutdown

* LOK-1787: fix test

* LOK-1787: clean up